--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>NIC_Intepreter</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>NIC_Intepreter Maven Webapp</name>
+    <name>NIC_Interpreter Maven Webapp</name>
     <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
@@ -26,7 +26,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>NIC_Intepreter</finalName>
+        <finalName>NIC_Interpreter</finalName>
         <plugins>
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
